feat: Implement multi-source reasoning architecture and Gemini Flash integration
SUMMARY:
Transform the system from rule-based automation to true agentic reasoning. This update enables the AI to synthesize performance data, incident logs, market context, and human reviews to make nuanced contract recommendations using the latest Google Gemini-Flash SDK.
CORE ARCHITECTURE:
- Implemented ReasoningAgent with Chain-of-Thought (CoT) prompting.
- Created DocumentLoader to synthesize 4+ data sources (CSV, JSON, TXT, MD).
- Established an LLM-agnostic abstraction layer for seamless provider switching.
- Improved path resolution to support running the backend from any project sub-directory.
LLM UPGRADE:
- Integrated Google Gemini API as the primary reasoning engine.
- Migrated legacy SDK to the latest 'google-genai' SDK for modern features.
- Strictly configured 'gemini-flash-latest' as the production-ready model.
- Retained swappable configuration for Ollama and Azure OpenAI.
FRONTEND INTEGRATION:
- Created ReasoningChain component to visualize the AI's step-by-step logic.
- Added confidence badges and justification displays to the dashboard.
- Integrated contract selection to show deep reasoning details per vendor.
DOCUMENTATION:
- Added REASONING_GUIDE.md for architecture and data structure details.
- Added LLM_SWITCHING_GUIDE.md for provider-agnostic maintenance.
- Updated .env.example with Gemini configuration requirements.
Dependencies: Added pandas, pypdf, openpyxl, and google-genai.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 # LLM Configuration
-LLM_PROVIDER=ollama
+LLM_PROVIDER=gemini  # gemini, ollama, or azure
+
+# Google Gemini API
+GEMINI_API_KEY=your-gemini-api-key-here
+
+# Ollama Configuration (for local LLM)
 OLLAMA_BASE_URL=http://localhost:11434
 OLLAMA_MODEL=llama3.2:1b
 
