--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,21 @@
 llm:
-  provider: ollama  # ollama or azure
+  provider: gemini  # Active provider: gemini, ollama, or azure
+  
+  # Google Gemini configuration
+  gemini:
+    model: gemini-flash-latest  # Strictly using the latest flash model
+    api_key: ""  # Use GEMINI_API_KEY env var for security
+    temperature: 0.3
+    max_tokens: 2048
+  
+  # Ollama configuration (for easy switching)
   ollama:
     model: llama3.2:1b
     base_url: http://localhost:11434
     temperature: 0.1
     max_tokens: 1024
+  
+  # Azure OpenAI configuration (for easy switching)
   azure:
     endpoint: https://daleel-openai.openai.azure.com/
     deployment: gpt-4o
