--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,7 @@ llm:
   
   # Google Gemini configuration
   gemini:
-    model: gemini-flash-latest  # Strictly using the latest flash model
+    model: gemini-2.5-flash-lite  # Use 2.5 for better quotas and speed
     api_key: ""  # Use GEMINI_API_KEY env var for security
     temperature: 0.3
     max_tokens: 2048
