feat: institutionalize on-demand AI auditing with high-fidelity reasoning
- Transitioned architecture from batch to surgical on-demand vendor analysis
- Implemented "Upsert" logic in CSV storage to eliminate vendor row duplication
- Upgraded intelligence core to Gemini 2.0/3-Flash with 4096-token headroom
- Enhanced Reasoning Engine to quote exact metrics, citations, and SLA figures
- Synchronized monthly performance data with detailed incident logs for accuracy
- Replaced global loading states with localized "Thinking..." skeleton loaders
- Added complete executive documentation suite (Talking Points, Technical Flow, LLM Explainer)
- Hardened JSON parsing with automatic repair and field-completeness guardrails

--- a/config.yaml
+++ b/config.yaml
@@ -3,10 +3,10 @@ llm:
   
   # Google Gemini configuration
   gemini:
-    model: gemini-2.5-flash-lite  # Use 2.5 for better quotas and speed
+    model: gemini-3-flash-preview 
     api_key: ""  # Use GEMINI_API_KEY env var for security
     temperature: 0.3
-    max_tokens: 2048
+    max_tokens: 4096
   
   # Ollama configuration (for easy switching)
   ollama:
